apps/test-app-1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app-1-service
  namespace: test-app-1
  labels:
    app: test-app-1
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: test-app-1
